# PythonWebScraper

./: Jobs for python.csv  Jobs for react.csv  file.py  main.py  pyproject.toml
extractors/: indeed.py  wwr.py
templates/: home.html  search.html
